# FileAPI

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  openapi.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2022-09-16_initial.py
app/endpoints/: __init__.py  additional_tasks.py  import_fiels.py
app/models/: db.py  item.py
app/schems/: item.py
app/utils/items/: utils.py
lib/: db_acessor.py
