[tool.poetry]
name = "yandex-autum"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "yandex_autum"}]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
fastapi = "^0.84.0"
fastapi-pagination = "^0.10.0"
uvicorn = "^0.18.3"
unicorn = "^2.0.0"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
